WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
295672
REGRESSION (
296485@main
): Wikipedia can get into a weird state after long pressing on certain video links
https://bugs.webkit.org/show_bug.cgi?id=295672
Summary
REGRESSION (296485@main): Wikipedia can get into a weird state after long pre...
Wenson Hsieh
Reported
2025-07-09 16:49:55 PDT
rdar://154793516
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2025-07-09 17:11:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47794
EWS
Comment 2
2025-07-09 20:12:29 PDT
Committed
297197@main
(d16baa5d7857): <
https://commits.webkit.org/297197@main
> Reviewed commits have been landed. Closing PR #47794 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug