Source/WebKit/UIProcess/ios/UIKitUtilities.mm
@@ -228,10 +228,12 @@ static UIAxis axesForDelta(WebCore::FloatSize delta)
 
 - (BOOL)_wk_usesHardTopScrollEdgeEffect
 {
+    // Calling this getter may trigger unintended behaviors, since calling -[UIScrollEdgeEffect style]
+    // may cause UIKit to layout subviews during the next update cycle.
     return [self.topEdgeEffect.style isEqual:UIScrollEdgeEffectStyle.hardStyle];
 }
 
-#endif
+#endif // ENABLE(CONTENT_INSET_BACKGROUND_FILL)
 
 @end
 
